--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EthereumClassicExplorer",
+  "name": "smilo-block-explorer",
   "private": false,
   "version": "0.1.0",
   "description": "A lightweight ethereum classic block explorer",
