--- a/tools/config.json
+++ b/tools/config.json
@@ -1,4 +1,5 @@
 {
+    "gethAddress": "localhost",
     "gethPort": 8545, 
     "blocks": [ {"start": 2000000, "end": "latest"}],
     "quiet": false,
