updated to https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
     build:
       context: .
       dockerfile: grabber.Dockerfile
+  internals:
+    build:
+      context: .
+      dockerfile: internals.Dockerfile
   app:
     build:
       context: .
