--- a/tools/config.json
+++ b/tools/config.json
@@ -4,5 +4,5 @@
     "blocks": [ {"start": 2000000, "end": "latest"}],
     "quiet": false,
     "terminateAtExistingDB": false,
-    "listenOnly": true
+    "listenOnly": false
 }
