Explorer Mined Blocks and bug fixes

--- a/tools/config.json
+++ b/tools/config.json
@@ -1,6 +1,6 @@
 {
-    "gethAddress": "localhost",
-    "gethPort": 8545, 
+    "gethAddress": "testnet-wallet.smilo.network/api",
+    "gethPort": 443, 
     "blocks": [ {"start": 2000000, "end": "latest"}],
     "quiet": false,
     "terminateAtExistingDB": false,
