--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "bignumber.js": "^2.4.0",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.15.2",
     "ejs": "~0.8.5",
     "express": "^4.14.0",
@@ -15,6 +16,6 @@
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.4.8",
     "solc": "file:local_modules/solc",
-    "web3": "git://github.com/elaineo/web3.js#develop"
+    "web3": "0.19.0"
   }
 }
