--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
       - '27017:27017'
   explorer-app:
     container_name: explorer-app
-    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:testnet
+    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:mainnet
     command: ./app.js
     restart: always
     environment:
@@ -18,10 +18,10 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ./config.json:/app/config.json
+      - ./config-prod.json:/app/config.json
   explorer-sync:
     container_name: explorer-sync
-    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:testnet
+    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:mainnet
     command: ./tools/sync.js
     restart: always
     environment:
@@ -29,10 +29,10 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ./config.json:/app/config.json
+      - ./config-prod.json:/app/config.json
   explorer-stats:
     container_name: explorer-stats
-    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:testnet
+    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:mainnet
     command: ./tools/stats.js
     restart: always
     environment:
@@ -40,10 +40,10 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ./config.json:/app/config.json
+      - ./config-prod.json:/app/config.json
   explorer-richlist:
     container_name: explorer-richlist
-    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:testnet
+    image: 462619610638.dkr.ecr.eu-west-1.amazonaws.com/smilo/explorer:mainnet
     command: ./tools/richlist.js
     restart: always
     environment:
@@ -51,4 +51,4 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ./config.json:/app/config.json
+      - ./config-prod.json:/app/config.json
