--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "nodeAddr":     "testnet-wallet.smilo.network/ws",
+    "nodeAddr":     "ws.mainnet.smilo.network",
     "wsPort":       443,
-    "startBlock":   0,
+    "startBlock":   "latest",
     "endBlock":     "latest",
     "quiet":        true,
     "syncAll":      true,
