--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint *.js ./lib/*.js ./test/*.js ./test/units/*.js ./routes/*.js ./tools/*.js --fix"
   },
   "dependencies": {
+    "abi-decoder": "^2.2.2",
     "bignumber.js": "^8.1.1",
     "body-parser": "^1.18.3",
     "concurrently": "4.1.0",
