--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-    "nodeAddr":     "ws.mainnet.smilo.network",
+    "nodeAddr":     "ws.didux.network",
     "wsPort":       443,
-    "startBlock":   "latest",
+    "startBlock":   "0",
     "endBlock":     "latest",
     "quiet":        true,
     "syncAll":      true,
     "patch":        true,
     "patchBlocks":  100,
-    "bulkSize":     100,
+    "bulkSize":     1000,
     "settings": {
         "symbol": "XD",
         "name": "Didux.io",
         "title": "Didux Platform Block Explorer",
-        "author": "Elaine, Cody, Hackmod, Bakon",
+        "author": "Daniel, Elkan",
         "contact": "info@didux.io",
         "about": "This is the Didux Blockchain Explorer.",
         "rss": "https://didux.io",
@@ -20,7 +20,7 @@
         "linkedin": "https://www.linkedin.com/company/didux-io/",
         "github": "https://github.com/didux-io/",
         "logo": "/img/didux-logo.png",
-        "copyright": "2019 &copy; Didux Platform.",
+        "copyright": "2019 &copy; Didux.io",
         "poweredbyCustom": false,
         "poweredbyEtcImage": "/img/powered-by-etcexplorer-w.png",
         "poweredbyEtc": false,
@@ -28,9 +28,19 @@
         "useRichList": true,
         "useFiat": false,
         "miners": {
-            "0x18376081F21B97e7E6678a9e82B8d45928509f57": "Didux.io Foundation",
-            "0x0fbc07ebdCE2BfeAd66F1686D67f9EA5c759E433": "Didux.io Foundation",
-            "0x7cB791430D2461268691bfBA6e35d8a8C7eA2E63": "Didux.io Foundation"
+            "0x3eaaab80e68df347d4f67dfc2b6e5374dc82cde6": "Didux node 1",
+            "0x2b3ef64677cfd74bbc74fab4edecb6ab43a085b6": "Didux node 2",
+            "0xc0ad1d8829e0e3750923711820ab5db8e9028eba": "Didux node 3",
+            "0xf9216c8e2d584194aedba520b471145df460bc90": "Didux node 4",
+            "0x24ee7b148b55df273bc4a9ae95d4fe4a38523d8d": "Didux node 5",
+            "0x71a0662967f6fffee0dcd48212442b964c1a72b3": "Didux node 6",
+            "0x3a478b61a49b7d7eee100cd5ff87e251b9fb19da": "Didux node 7",
+            "0x87142ee9ad7c1b675005e39b4fcaac7452df49fc": "Didux node 8",
+            "0x52161ab9ebeb3468253b4e2a775e730a42f953eb": "Didux node 9",
+            "0x41e7a72b843ffa7813ff979dc8bc21429e461ad9": "Didux node 10",
+            "0x501ec2563de403a87acfe6631d50d90aabdd1a03": "Didux node 11",
+            "0x4a2d36406509336db56818f356c4f631388e7dd4": "Didux node 12",
+            "0xbc75c3B64e7621469509df5Cdd61F4f419eC903F": "Didux.io Foundation",
         }
     }
 }
