updated nodeAddr to keep the wss:// or ws://

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "nodeAddr":     "ws.didux.network",
-    "wsPort":       443,
-    "startBlock":   "0",
+    "nodeAddr":     "ws://localhost",
+    "wsPort":       23001,
+    "startBlock":   0,
     "endBlock":     "latest",
     "quiet":        true,
-    "syncAll":      false,
+    "syncAll":      true,
     "patch":        true,
     "patchBlocks":  100,
     "bulkSize":     1000,
