--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "mongoose": "^4.13.18",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
+    "rebuild": "^0.1.2",
     "rlp": "^2.2.3",
     "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb",
     "serve-favicon": "~2.5.0",
     "solc": "^0.5.6",
-    "web3": "1.0.0-beta.37",
+    "web3": "^1.0.0-beta.37",
     "web3-explorer": "1.0.2",
     "websocket": "^1.0.28"
   },
