--- a/config.json
+++ b/config.json
@@ -1,6 +1,4 @@
 {
-    "nodeAddr":     "wss://ws.didux.network",
-    "wsPort":       443,
     "startBlock":   0,
     "endBlock":     "latest",
     "quiet":        true,
@@ -42,5 +40,6 @@
             "0x4a2d36406509336db56818f356c4f631388e7dd4": "Didux node 12",
             "0xbc75c3B64e7621469509df5Cdd61F4f419eC903F": "Didux.io Foundation"
         }
-    }
+    },
+    "nodes": [ "ws://212.32.245.83:23000", "ws://212.32.245.91:23000", "ws://51.89.103.235:23000", "ws://37.59.131.19:23000"]
 }
