--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
         "linkedin": "https://www.linkedin.com/company/didux-io/",
         "github": "https://github.com/didux-io/",
         "logo": "/img/didux-logo.png",
-        "copyright": "2019 &copy; Didux.io",
+        "copyright": "2019 - 2022 &copy; Didux.io",
         "poweredbyCustom": false,
         "poweredbyEtcImage": "/img/powered-by-etcexplorer-w.png",
         "poweredbyEtc": false,
