time for testing

--- a/package.json
+++ b/package.json
@@ -16,35 +16,36 @@
     "lint:fix": "eslint *.js ./lib/*.js ./test/*.js ./test/units/*.js ./routes/*.js ./tools/*.js --fix"
   },
   "dependencies": {
-    "@types/cors": "^2.8.4",
-    "abi-decoder": "^2.2.2",
-    "bignumber.js": "^8.1.1",
-    "body-parser": "^1.18.3",
-    "browserify": "^16.5.1",
+    "@types/cors": "2.8.4",
+    "abi-decoder": "2.2.2",
+    "async": "3.2.4",
+    "bignumber.js": "8.1.1",
+    "body-parser": "1.18.3",
+    "browserify": "16.5.1",
     "concurrently": "4.1.0",
-    "cors": "^2.8.4",
+    "cors": "2.8.4",
     "ejs": "2.6.1",
-    "express": "^4.16.4",
-    "human-standard-token-abi": "^2.0.0",
-    "mongoose": "^4.13.18",
-    "morgan": "^1.9.1",
-    "node-fetch": "^2.3.0",
-    "rebuild": "^0.1.2",
-    "rlp": "^2.2.3",
+    "express": "4.16.4",
+    "human-standard-token-abi": "2.0.0",
+    "mongoose": "6.10.0",
+    "morgan": "1.9.1",
+    "node-fetch": "2.3.0",
+    "rebuild": "0.1.2",
+    "rlp": "2.2.3",
     "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb",
     "serve-favicon": "~2.5.0",
-    "solc": "^0.5.6",
+    "solc": "0.5.6",
     "web3": "1.8.0",
     "web3-explorer": "1.0.4",
-    "websocket": "^1.0.34"
+    "websocket": "1.0.34"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "html-linter": "^1.1.1",
-    "mocha": "^6.0.2",
-    "request": "^2.88.0"
+    "chai": "4.2.0",
+    "eslint": "5.15.3",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "html-linter": "1.1.1",
+    "mocha": "6.0.2",
+    "request": "2.88.0"
   }
 }
